--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "numpy>=1.21.0",
     "scipy>=1.9.0",
     "scikit-learn>=1.1.0",
+    "lightgbm>=4.6.0",
 ]
 
 [project.urls]
