--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "scipy>=1.9.0",
     "scikit-learn>=1.1.0",
     "lightgbm>=4.6.0",
+    "tensorflow>=2.20.0",
 ]
 
 [project.urls]
